--- a/MiniChallenge8iOS/Storyboards/Base.lproj/Main.storyboard
+++ b/MiniChallenge8iOS/Storyboards/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
         <!--Reaction View Controller-->
         <scene sceneID="lNy-30-6ln">
             <objects>
-                <viewController storyboardIdentifier="reactionViewController" modalTransitionStyle="crossDissolve" useStoryboardIdentifierAsRestorationIdentifier="YES" id="HiA-hc-UBe" customClass="ReactionViewController" customModule="MiniChallenge8iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="feedbackViewController" modalTransitionStyle="crossDissolve" useStoryboardIdentifierAsRestorationIdentifier="YES" id="HiA-hc-UBe" customClass="ReactionViewController" customModule="MiniChallenge8iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9uv-4l-dnO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
