--- a/MiniChallenge8iOS/Storyboards/Base.lproj/Main.storyboard
+++ b/MiniChallenge8iOS/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fqd-5o-M7f">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fqd-5o-M7f">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -154,7 +154,7 @@
                                     <constraint firstAttribute="height" constant="2" id="VUE-45-eoZ"/>
                                 </constraints>
                             </view>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oAw-Ub-YUi">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oAw-Ub-YUi">
                                 <rect key="frame" x="0.0" y="114" width="375" height="146.5"/>
                                 <color key="backgroundColor" red="0.19215686274509805" green="0.14901960784313725" blue="0.21568627450980393" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="40" minimumInteritemSpacing="0.0" id="ZJE-uV-J4N">
@@ -266,7 +266,7 @@
         <image name="Reaction" width="375" height="812"/>
         <image name="check" width="28" height="22"/>
         <image name="moneyReactionButton" width="202" height="202"/>
-        <image name="rapper1" width="227" height="227"/>
+        <image name="rapper1" width="316" height="316"/>
         <image name="reactionScreen" width="375" height="812"/>
         <image name="waitingScreenBackground" width="375" height="812"/>
     </resources>
